yaml/share-env-app-trace/dev2/c.yaml
apiVersion: v1
kind: Service
metadata:
  name: c
  namespace: dev2-env-dev
  labels:
    app: c
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8082
  selector:
    app: c

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: c
  namespace: dev2-env-dev
  labels:
    app: c
    version: dev2
spec:
  selector:
    matchLabels:
      app: c
      version: dev2
  replicas: 1
  template:
    metadata:
      labels:
        app: c
        version: dev2
    spec:
      containers:
      - name: nginx
        image: ccr.ccs.tencentyun.com/flyer103/myapp-3:6318d09__linux_amd64
        imagePullPolicy: Always
        command: ["/myapp-3"]
        ports:
        - containerPort: 8082
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
